[tool.poetry]
name = "google-semantic-location-tools"
version = "0.1.0"
description = ""
authors = ["Gaz Iqbal <gaziqbal@gmail.com>"]
readme = "README.md"
packages = [{include = "google_semantic_location_tools"}]

[tool.poetry.dependencies]
python = "^3.8"
geopy = "^2.3.0"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
